tabs fix bug 392 confirgurable option should align left with example tab

--- a/src/assets/examples/tab-group-dynamic/tab-group-dynamic.component.css
+++ b/src/assets/examples/tab-group-dynamic/tab-group-dynamic.component.css
@@ -8,3 +8,8 @@
   margin-right: 40px;
   text-align: left;
 }
+
+.example-controller {
+  text-align: left;
+  padding-left: 40px;
+}
